--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -320,5 +320,16 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
+
+    #photos {
+        column-count: 3;
+    }
 }
 
+/* for small sizes */
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
+}
